fix: #90 修复有序列表折叠时序号被遮挡问题 | Fixed an issue where the sequence numbers of folding ordered list were covered.

--- a/style/module/block-list.less
+++ b/style/module/block-list.less
@@ -5,6 +5,16 @@
 
 .protyle-wysiwyg {
     [data-node-id].li {
+        >.protyle-action {
+            /* 列表标志 */
+            z-index: 0;
+
+            &::after {
+                /* 标志阴影 */
+                z-index: -1;
+            }
+        }
+
         >[data-node-id] {
             &::before {
                 /* 缩进辅助线样式 */
